deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-lang-web-app
  labels:
    app: go-lang-web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-lang-web-app
  template:
    metadata:
      labels:
        app: go-lang-web-app
    spec:
      containers:
        - name: go-lang-web-app
          image: piyushkalawatiya1/golang-web-app:v1
          ports:
            - containerPort: 8080
