service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-lang-web-app
spec:
  selector:
    app: go-lang-web-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
