ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
spec:
  ingressClassName: nginx
  rules:
  - host: "go-lang-web-app.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-lang-web-app
            port:
              number: 80
